cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_359.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/test/params_test.c:393: error: DEAD_STORE
  The value written to &n (type unsigned long) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/test/params_test.c:393:12: Write of unused value
391.                                                   sizeof(app_p6_init));
392.       params[n++] = OSSL_PARAM_construct_octet_string("foo", &foo, sizeof(foo));
393.       params[n++] = OSSL_PARAM_construct_end();
                  ^
394.   
395.       return params;
